<!-- Copyright (c) 2019. -->
<!-- Tạo bởi Cừu Đen -->
<!-- -->
<!-- Gmail: 0331999bbs@gmail.com -->
<!-- Phone: 0347079556 -->

<resources>
    <string name="app_name">Poly Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="gia_goc">Gia goc</string>
    <string name="gia_sp">Gia SP</string>
    <string name="vnd"> VND</string>
    <string name="namesp">NameSP .......................</string>
    <string name="sale">%</string>
    <string name="sl">sl</string>
    <string name="noInternet">Chưa có kết nối mạng!</string>
    <string name="connectInternet">Bạn có muốn mở wifi?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="register">Đăng ký</string>
    <string name="or">Hoặc</string>
    <string name="rememberMe">Nhớ tài khoản ?</string>
    <string name="login">Đăng nhập</string>
    <string name="passwork">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="tvLogin">Đăng nhập</string>
    <string name="infoSP">Thông tin chi tiết sản phẩm</string>
    <string name="name_sp">Name SP</string>
    <string name="info_sp">Info SP</string>
    <string name="price_sp">Price SP</string>
    <string name="addCart">Thêm giỏ hàng</string>
    <string name="buyNow">Mua ngay</string>
    <string name="tvRegister">Đăng ký</string>
    <string name="btnRegister">Đăng ký</string>
    <string name="rePassword">Nhập lại mật khẩu</string>
    <string name="user">Tên tài khoản</string>
    <string name="userName">Tên người dùng</string>
    <string name="chatWhitMe">Nhắn tin với cửa hàng</string>
    <string name="enterMess">Nhập tin nhắn</string>
    <string name="sendMess">Gửi</string>
    <string name="address">Nơi ở:</string>
    <string name="tvEmail">Địa chỉ email:</string>
    <string name="tvDate">Ngày sinh:</string>
    <string name="tvName">Tên người dùng:</string>
    <string name="tvCart">Giỏ hàng</string>
    <string name="btnOrder">Đặt hàng</string>
    <string name="totalCart">Tổng tiền:</string>
    <string name="btnPay">Thanh toán</string>
    <string name="tvAccOrder">Các sản phẩm đã mua</string>
    <string name="search">Tìm kiếm</string>
    <string name="notFound">Không tìm thấy sản phẩm bạn yêu cầu!</string>
    <string name="tvOrder">Nhập thông tin người nhận</string>
    <string name="save">Lưu</string>
    <string name="UNameOrder">Tên người nhận</string>
    <string name="phone">Số điện thoại</string>
    <string name="sl_sp">Số lượng</string>
</resources>
