<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2019. -->
<!-- Tạo bởi Cừu Đen -->
<!-- -->
<!-- Gmail: 0331999bbs@gmail.com -->
<!-- Phone: 0347079556 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/borrder_top"
        android:gravity="center|start">

        <Button
            android:id="@+id/btnBackOrder"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tvOrder"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtNameOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/UNameOrder"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtEmailOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtAddOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/address"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPhoneOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSaveOrder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity=""
            android:background="@drawable/borrder"
            android:text="@string/save"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</LinearLayout>