<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="left"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/btnBackRegister"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="@drawable/ic_arrow_back_yellow_24dp"
            android:onClick="ButtonClick" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/beebee" />

            <ProgressBar
                android:id="@+id/register_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:fontFamily="serif"
                android:maxLines="1"
                android:padding="20dp"
                android:text="@string/tvRegister"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edtUserRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/user"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edtEmailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edtNameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/userName"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtPassRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/passwork"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/EditTextHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtRePassRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/rePassword"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnRegisterRe"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borrder"
                    android:onClick="ButtonClick"
                    android:text="@string/btnRegister"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark" />

                <View
                    android:layout_width="250dp"
                    android:layout_height="2dip"
                    android:background="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/or"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnLoginRe"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/borrder"
                    android:onClick="ButtonClick"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>