<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/borrder_top"
        android:gravity="center|start">

        <Button
            android:id="@+id/btnBackCart"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tvCart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <ListView
            android:id="@+id/lvCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="start|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/totalCart"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalCart"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="" />

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:background="@drawable/borrder"
            android:text="@string/btnOrder"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</LinearLayout>