<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2019. -->
<!-- Tạo bởi Cừu Đen -->
<!-- -->
<!-- Gmail: 0331999bbs@gmail.com -->
<!-- Phone: 0347079556 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/borrder_item"
                android:src="@drawable/beebee" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvName"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAccName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userName" />
                </LinearLayout>

                <View
                    android:layout_width="250dp"
                    android:layout_height="2dip"
                    android:background="#FFF" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvDate"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAccDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userName" />
                </LinearLayout>

                <View
                    android:layout_width="250dp"
                    android:layout_height="2dip"
                    android:background="#FFF" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvEmail"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAccEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userName" />
                </LinearLayout>

                <View
                    android:layout_width="250dp"
                    android:layout_height="2dip"
                    android:background="#FFF" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAccAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userName" />
                </LinearLayout>

                <View
                    android:layout_width="250dp"
                    android:layout_height="2dip"
                    android:background="#FFF" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/mChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tag"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/tvAccOrder"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lvAccOrder"
                android:layout_marginBottom="100dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>